Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -384,7 +384,7 @@ At table \ref{tab:DistribValuePDF} we compare distribution values obtained direc
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.6\linewidth]{Python/CDF_cl.png}
+    \resizebox{0.6\linewidth}{!}{\input{Python/CDF_cl.pgf}}
     \caption{Cumulative distribution function (CDF) computed from data at centreline ($y=30$ \si{mm})}
     \label{fig:CDF_cl}
 \end{figure}
@@ -396,6 +396,12 @@ The matching of curves from different locations at figure \ref{fig:F11_filtering
 \section{Error Analysis}
 
 \section{Conclusions}
+
+
+The entire code will be available on the Github : ..... You will find \verb|Python|'s script in the \verb|Python| folder. with in particular the following useful files :
+\begin{enumerate}
+    \item 
+\end{enumerate}
 
 \newpage
 % References
