--- a/main.tex
+++ b/main.tex
@@ -384,7 +384,7 @@ At table \ref{tab:DistribValuePDF} we compare distribution values obtained direc
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.6\linewidth]{Python/CDF_cl.png}
+    %\resizebox{0.6\linewidth}{!}{\input{Python/CDF_cl.pgf}}
     \caption{Cumulative distribution function (CDF) computed from data at centreline ($y=30$ \si{mm})}
     \label{fig:CDF_cl}
 \end{figure}
@@ -396,6 +396,15 @@ The matching of curves from different locations at figure \ref{fig:F11_filtering
 \section{Error Analysis}
 
 \section{Conclusions}
+
+
+The entire code will be available on the Github : ..... You will find \verb|Python|'s script in the \verb|Python| folder. with in particular the following useful files :
+\begin{enumerate}
+    \item \verb|CalibrationAnemometer.py| that computes and displays King's Law constant
+    \item \verb|PDF_function.py| that defines the custom PDF function and uses it for the required computations
+    \item \verb|U_Momentum_Analysis.py| that outputs all the required profiles and fits the log-law
+    \item \verb|Spectrum.py| Compute the 3D spectra in a dimensionless form
+\end{enumerate}
 
 \newpage
 % References
