--- a/references.bib
+++ b/references.bib
@@ -169,3 +169,19 @@
 	year = {2015},
 	pages = {823--847}
 }
+
+@article{derksenCalibrationErrorMeasurement1995,
+	title = {Calibration error and the measurement of turbulence statistics},
+	volume = {6},
+	issn = {11804009, 1099095X},
+	url = {http://doi.wiley.com/10.1002/env.3170060612},
+	doi = {10.1002/env.3170060612},
+	language = {en},
+	number = {6},
+	urldate = {2020-04-23},
+	journal = {Environmetrics},
+	author = {Derksen, R. W.},
+	month = nov,
+	year = {1995},
+	pages = {651--658}
+}
