Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -384,7 +384,7 @@ At table \ref{tab:DistribValuePDF} we compare distribution values obtained direc
 
 \begin{figure}
     \centering
-    %\resizebox{0.6\linewidth}{!}{\input{Python/CDF_cl.pgf}}
+    \resizebox{0.6\linewidth}{!}{\input{Python/CDF_cl.pgf}}
     \caption{Cumulative distribution function (CDF) computed from data at centreline ($y=30$ \si{mm})}
     \label{fig:CDF_cl}
 \end{figure}
@@ -394,6 +394,10 @@ At table \ref{tab:DistribValuePDF} we compare distribution values obtained direc
 The matching of curves from different locations at figure \ref{fig:F11_filtering_and_comparison}.b seems to agree with Kolmogorov's predictions on universal laws of turbulence at small scales. The three one dimensional spectra fits very properly the one with the other after being made dimensionless using $\kappa^* = \kappa \eta$ and $F_{11}^*$ from $F_{11}$ using viscosity and dissipation rate. Concerning three dimensional spectra $E$ made dimensionless at figure \ref{fig:F_comparison}, the many operations to obtain it may have altered a bit the signal. Nevertheless, there is a range for $\kappa \gtrsim 7e-2$ where the three spectra match pretty well. That being said, the slope in this range seems to be slightly greater (in absolute value) than the $-5/3$ Kolmogorov's prediction.
 
 \section{Error Analysis}
+
+We propose a brief overview of error analysis in this section. Since our results come from measurements that are processed sometimes quite a lot, it can be interesting to keep in mind the different sources of errors. We can separate them in three groups : the errors that are inherent of the studied phenomena, the ones that comes from the data acquisition and finally the propagation of this error through data processing.\\
+
+
 
 \section{Conclusions}
 
