--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,17 @@
 
+@article{pollardWhitherTurbulenceBig,
+	title = {Whither {Turbulence} and {Big} {Data} in the 21st {Century}?},
+	author = {Pollard, Andrew and Castillo, Luciano and Danaila, Luminita and Glauser, Mark},
+	file = {Full Text:C\:\\Users\\Gaétan\\Zotero\\Dropbox\\storage\\CC5MB2PI\\Pollard et al. - Whither Turbulence and Big Data in the 21st Centur.pdf:application/pdf}
+}
+
+@misc{DeepLearningTurbulent,
+	title = {Deep learning of turbulent scalar mixing},
+	url = {https://journals.aps.org/prfluids/abstract/10.1103/PhysRevFluids.4.124501},
+	urldate = {2019-12-09},
+	file = {Phys. Rev. Fluids 4, 124501 (2019) - Deep learning of turbulent scalar mixing:C\:\\Users\\Gaétan\\Zotero\\Dropbox\\storage\\3EIAF9C6\\PhysRevFluids.4.html:text/html;Phys.pdf:C\:\\Users\\Gaétan\\Zotero\\Dropbox\\Phys.pdf:application/pdf}
+}
+
 @book{tennekesFirstCourseTurbulence1972,
 	title = {A {First} {Course} in {Turbulence}},
 	isbn = {978-0-262-20019-6},
