--- a/references.bib
+++ b/references.bib
@@ -12,6 +12,44 @@
 	file = {Phys. Rev. Fluids 4, 124501 (2019) - Deep learning of turbulent scalar mixing:C\:\\Users\\Gaétan\\Zotero\\Dropbox\\storage\\3EIAF9C6\\PhysRevFluids.4.html:text/html;Phys.pdf:C\:\\Users\\Gaétan\\Zotero\\Dropbox\\Phys.pdf:application/pdf}
 }
 
+@article{mehtaDiscoveringUniversalVariableorder2019,
+	title = {Discovering a universal variable-order fractional model for turbulent {Couette} flow using a physics-informed neural network},
+	volume = {22},
+	issn = {1311-0454, 1314-2224},
+	url = {http://www.degruyter.com/view/j/fca.2019.22.issue-6/fca-2019-0086/fca-2019-0086.xml},
+	doi = {10.1515/fca-2019-0086},
+	abstract = {Abstract
+            
+              The first fractional model for Reynolds stresses in wall-bounded turbulent flows was proposed by Wen Chen [2]. Here, we extend this formulation by allowing the fractional order
+              α
+              (
+              y
+              ) of the model to vary with the distance from the wall (
+              y
+              ) for turbulent Couette flow. Using available direct numerical simulation (DNS) data, we formulate an inverse problem for
+              α
+              (
+              y
+              ) and design a physics-informed neural network (PINN) to obtain the fractional order. Surprisingly, we found a
+              universal scaling law
+              for
+              α
+              (
+              y
+              +
+              ), where
+              y
+              +
+              is the non-dimensional distance from the wall in wall units. Therefore, we obtain a variable-order fractional model that can be used at any Reynolds number to predict the mean velocity profile and Reynolds stresses with accuracy better than 1\%.},
+	number = {6},
+	urldate = {2020-04-03},
+	journal = {Fractional Calculus and Applied Analysis},
+	author = {Mehta, Pavan Pranjivan and Pang, Guofei and Song, Fangying and Karniadakis, George Em},
+	month = dec,
+	year = {2019},
+	pages = {1675--1688}
+}
+
 @book{tennekesFirstCourseTurbulence1972,
 	title = {A {First} {Course} in {Turbulence}},
 	isbn = {978-0-262-20019-6},
